[package]
name = "backlash"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Backlash processor for signal conditioning."
repository = "https://github.com/sourcebox/backlash-rs"
license = "MIT"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["deadband", "analog", "smoothing", "potentiometer"]
